--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -133,6 +133,36 @@ label{
   width: calc(80% + 1em);
   margin: 0 auto 0 auto;
 }
+.ecocontent{
+  width:50%;
+  float: left;
+}
+.sideBar{
+  width: 40%;
+  max-width: 30em;
+  display: block;
+  box-sizing: inherit;
+  float: right;
+  margin: 15px 2px 15px 20px;
+  height: 300px;
+  position: relative;
+  margin-top: 200px;
+}
+.side-h{
+  margin: 0;
+  padding: 0 0 .25em;
+  font-size: 2em;
+  color: #2aa1d6;
+}
+.sideImgs{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+  object-position: center center;
+}
 article,
 aside,
 details,
@@ -146,6 +176,9 @@ nav,
 section,
 summary {
   display: block;
+}
+.side-a{
+  text-decoration: none;
 }
 audio,
 canvas,
