--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -58,7 +58,6 @@ label{
   display: none;
 }
 .hero-image{
-  position: absolute;
   left: 0px;
   width: 100%;
   height: 100%;
@@ -69,7 +68,6 @@ label{
 }
 .main-h{
   position: relative;
-  margin-top: 300px;
 }
 .content-box {
   background: #2aa1d6;
@@ -146,7 +144,24 @@ label{
   margin: 15px 2px 15px 20px;
   height: 300px;
   position: relative;
-  margin-top: 200px;
+  margin-bottom: 100px;
+}
+.side-article:last-child {
+  margin-bottom: 70px;
+}
+.side-p{
+  font-size: 10px;
+}
+p.time {
+  font-size: .8em;
+  color: #aaa;
+  display: flex;
+  align-items: center;
+}
+p.time svg {
+  max-width: 1.2em;
+  max-height: 1.2em;
+  margin-right: .2em;
 }
 .side-h{
   margin: 0;
@@ -352,7 +367,7 @@ html {
   overflow-y: scroll;
 }
 * {
-  box-sizing: inherit;
+  /* box-sizing: inherit; */
 }
 *:before {
   box-sizing: inherit;
@@ -541,7 +556,7 @@ p {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
+  /* margin-bottom: 1.45rem; */
 
 }
 figure {
@@ -829,6 +844,9 @@ pre tt:after {
     margin-left: auto;
     margin-right: auto;
   }
+  .contP{
+    margin-bottom: 60px;
+  }
   @media only screen and (max-width: 1024px) {
     html {
       font-size: 100%;
@@ -841,10 +859,9 @@ pre tt:after {
     margin-left: 10px;
     margin-right: 10px;
    }
-   .main-h{
+   /* .main-h{
     position: relative;
-    margin-top: 200px;
-  }
+  } */
   }
 @media only screen and (max-width: 480px) {
   html {
@@ -868,7 +885,7 @@ pre tt:after {
   }
   .main-h{
     position: relative;
-    margin-top: 100px;
+
   }
   label{
     display: block;
@@ -889,3 +906,22 @@ pre tt:after {
     display: block;
   }
   }
+  @media only screen and (max-width: 580px){
+  .ecocontent{
+      width:100%;
+  }  
+  .side-h{
+    margin-top: 50px;
+  }
+    .sideBar{
+    display: block;
+    width: 100%;
+    height: 300px;
+    margin: 20px 0 100px 0;
+    float: left;
+  }
+  .side-article{
+    width: 100%;
+    float: left;
+  }
+}
