--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -92,7 +92,7 @@ label{
 .content-box .image-box {
   width: 100%;
   position: relative;
-  height: 400px;
+  height: 00px;
   overflow: hidden;
 }
 .button {
@@ -131,6 +131,10 @@ label{
   width: calc(80% + 1em);
   margin: 0 auto 0 auto;
 }
+.active-cyan-2 input[type=text]:focus:not([readonly]) {
+  border-bottom: 1px solid #4dd0e1;
+  box-shadow: 0 1px 0 0 #4dd0e1;
+  }
 .ecocontent{
   width:50%;
   float: left;
@@ -177,6 +181,44 @@ p.time svg {
   height: 100%;
   object-fit: cover; 
   object-position: center center;
+}
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #2aa1d6;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #2aa1d6;
+}
+
+.searchTerm:focus{
+  color: #2aa1d6;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #2aa1d6;
+  background: #2aa1d6;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+/*Resize the wrap to see the search bar change!*/
+.wrap{
+  width: 50%;
 }
 article,
 aside,
@@ -858,6 +900,13 @@ pre tt:after {
     display: inline-block;
     margin-left: 10px;
     margin-right: 10px;
+   }}
+   @media only screen and (max-width: 470px) {
+    html {
+      font-size: 100%;
+    }
+    .site-footer{
+    height:70px;
    }
    /* .main-h{
     position: relative;
@@ -879,7 +928,7 @@ pre tt:after {
   font-size: 10px;
  }
 }
-@media only screen and (max-width: 580px){
+@media only screen and (max-width: 700px){
   .logo-style img{
     width: 100px;
   }
