--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -216,7 +216,10 @@ p.time svg {
   cursor: pointer;
   font-size: 20px;
 }
-
+.blog-a{
+  text-decoration: none;
+  font-size: 18px;
+}
 /*Resize the wrap to see the search bar change!*/
 .wrap{
   width: 50%;
