--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -9,15 +9,58 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #ffffff;
 }
 html, body{
   width: 100%;
   height: 100%;
   margin: 0;
 }
+div {
+ margin: 0px auto; max-width: 100%; padding: 0px;
+}
 p{
   line-height: 1.6;
+}
+.home-content{
+  width: 100%;
+  padding: 0;
+  margin: 0 auto;
+}
+.slide1{
+  height: 100vh;
+  width: 100%;
+  display: table;
+  background: url(https://www.adsyndicate.in/wp-content/uploads/2018/02/LP-bg-1.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slide2{
+  height: 100vh;
+  width: 100%;
+  display: table;
+  background: url(http://www.unicap.br/vestibularsocial/wp-content/plugins/page-layout-builder/images/bg/geometricBGs43.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slide3{
+  height: 100vh;
+  width: 100%;
+  display: table;
+  background: url(http://www.sakura.in.th/images/BG/bg-squares-3d.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.slide4{
+  height: 100vh;
+  width: 100%;
+  display: table;
+  background: url(https://www.lordsimpex.com.pk/wp-content/uploads/2015/03/bg-daily-news1.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .logo-style{
   max-width: 200px;
@@ -27,16 +70,15 @@ p{
   width: 200px;
   overflow: hidden;
 }
-.nav{
-  border-bottom: 1px solid #F2FBEF;
+.nav{  
   text-align: right;
   height: auto;
   min-height: 69px;
   line-height: 69px;
 }
 .menu{
-  margin: 0 30px 0 0;
-  z-index: 100;
+  background: url(https://www.adsyndicate.in/wp-content/uploads/2018/02/LP-bg-1.jpg);
+  margin: 0;
 
 }
 .menu a {
@@ -69,6 +111,7 @@ label{
 
 .main-h{
   position: relative;
+  padding: 20px;
 }
 .content-box {
   background: #2aa1d6;
@@ -234,6 +277,13 @@ nav,
 section,
 summary {
   display: block;
+}
+main{
+  width:100%;
+}
+
+article {
+  padding: 10px;
 }
 .side-a{
   text-decoration: none;
@@ -847,7 +897,6 @@ pre tt:after {
   padding: 0;
   margin: 0;
   text-align: center;
-  margin-top: 5px;
   font-size: 12px;
 }
 .site-footer ul li {
@@ -861,12 +910,10 @@ pre tt:after {
 .site-footer{
   background-color: #2aa1d6;
   min-width: 100%; 
-  position: fixed;
   height: 40px;
   bottom: 0px;
   left: 0px;
   right: 0px;
-  margin-top: 20px;
 }
 .site-footer ul li a {
   color: #ffffff;
@@ -941,7 +988,7 @@ pre tt:after {
     display: block;
     cursor: pointer;
   }
-  .menu{
+  .menu {
     text-align: center;
     width: 100%;
     display: none;
