--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -33,13 +33,13 @@ p{
   background: url(https://www.adsyndicate.in/wp-content/uploads/2018/02/LP-bg-1.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover;  
 }
 .slide2{
   height: 100vh;
-  width: 100%;
+    width: 100%;
   display: table;
-  background: url(http://www.unicap.br/vestibularsocial/wp-content/plugins/page-layout-builder/images/bg/geometricBGs43.jpg);
+  background: #fff;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
@@ -57,18 +57,22 @@ p{
   height: 100vh;
   width: 100%;
   display: table;
-  background: url(https://www.lordsimpex.com.pk/wp-content/uploads/2015/03/bg-daily-news1.jpg);
+  background: #fff;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .logo-style{
   max-width: 200px;
-  position: absolute;
+  position: fixed; 
   top: 10px;
   left: 10px;
   width: 200px;
   overflow: hidden;
+  z-index: 100;
+}
+.article-style{
+  padding: 10px 100px;
 }
 .nav{  
   text-align: right;
@@ -76,10 +80,9 @@ p{
   min-height: 69px;
   line-height: 69px;
 }
-.menu{
+.menu {
   background: url(https://www.adsyndicate.in/wp-content/uploads/2018/02/LP-bg-1.jpg);
-  margin: 0;
-
+  margin-bottom: 0;
 }
 .menu a {
   clear: right;
@@ -87,6 +90,12 @@ p{
   color: #dba074;
   margin: 0 10px;
   line-height: 70px;
+}
+.nav .menu {
+  top:0;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
 }
 label{
   margin: 0 40px 0 0;
@@ -99,7 +108,8 @@ label{
 #toggle {
   display: none;
 }
-.hero-image{
+
+/* .hero-image{
   left: 0px;
   width: 100%;
   height: 100%;
@@ -107,11 +117,34 @@ label{
   object-position: center center;
   opacity: 1;
   transition: opacity 500ms ease 0s;
-}
+} */
 
 .main-h{
   position: relative;
-  padding: 20px;
+  padding: 20px 150px;
+}
+.first-button a{
+  text-decoration: none;
+  color: #dba074;
+  padding: 7px;
+
+}
+.first-button{
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  background-color: transparent;
+   border: 1px solid #dba074;
+   color: #dba074;
+   transition: all 0.3s ease-in-out;
+   }
+
+.first-button:hover, .first-button a:hover{
+  opacity: 0.8;
+  transition:  0.4s ease;
+  background-color: #2aa1d6;
+  color:#fff;
+
 }
 .content-box {
   background: #2aa1d6;
@@ -976,28 +1009,34 @@ pre tt:after {
   font-size: 10px;
  }
 }
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 915px){
   .logo-style img{
     width: 100px;
   }
   .main-h{
-    position: relative;
-
+    padding-top: 75px; 
   }
   label{
     display: block;
     cursor: pointer;
   }
+  .nav{
+    background: url(https://www.adsyndicate.in/wp-content/uploads/2018/02/LP-bg-1.jpg);
+    position: fixed;
+    width:100%;
+    z-index: 99;
+  }
+
   .menu {
     text-align: center;
     width: 100%;
     display: none;
-
+    margin-top:69px;
   }
   .menu a {
     display: block;
     border-bottom: 1px solid rgb(109, 109, 143);
-    margin: 0;
+    margin:0;
   }
   #toggle:checked + .menu{
     display: block;
