--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -29,38 +29,48 @@ p{
 .slide1{
   height: 100vh;
   width: 100%;
+  padding: 60px 0;
   display: table;
-  background: url(https://www.adsyndicate.in/wp-content/uploads/2018/02/LP-bg-1.jpg);
+  /* background: url(https://images7.alphacoders.com/546/546027.jpg); */
+  background-color: #A8D0E6;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;  
 }
-.slide2{
-  height: 100vh;
-    width: 100%;
+.slide2 {
+  padding: 60px 0;
+ height: 100vh;
+  width: 100%;
   display: table;
-  background: #fff;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: #F8E9A1;
 }
 .slide3{
+  padding: 60px 0;
   height: 100vh;
   width: 100%;
   display: table;
-  background: url(http://www.sakura.in.th/images/BG/bg-squares-3d.jpg);
+  /* background: url(http://www.sakura.in.th/images/BG/bg-squares-3d.jpg); */
+  background-color: #A8D0E6;
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
 }
 .slide4{
+  padding: 60px 0;
   height: 100vh;
   width: 100%;
   display: table;
-  background: #fff;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: #F76C6C;
+}
+.slide1 p{
+  font-weight: 300;
+  width: 70%;
+  color: #374785;
+}
+.slide2 p{
+  font-weight: 300;
+  width: 70%;
+  color: #374785;
 }
 .logo-style{
   max-width: 200px;
@@ -72,30 +82,36 @@ p{
   z-index: 100;
 }
 .article-style{
-  padding: 10px 100px;
+  height:80%;
+}
+.article-style p{
+  margin: auto auto 30px;
+  font-size: 9px;
 }
 .nav{  
   text-align: right;
   height: auto;
-  min-height: 69px;
+  height: 60px;
   line-height: 69px;
 }
 .menu {
-  background: url(https://www.adsyndicate.in/wp-content/uploads/2018/02/LP-bg-1.jpg);
+  background:#ffffff;
   margin-bottom: 0;
 }
 .menu a {
   clear: right;
   text-decoration: none;
-  color: #dba074;
+  color: #A8D0E6;
   margin: 0 10px;
   line-height: 70px;
 }
 .nav .menu {
   top:0;
+  background-color: #24305E;
   position: fixed;
   z-index: 10;
   width: 100%;
+  box-shadow: 0 1px 4px  rgba(0,0,0,.2);
 }
 label{
   margin: 0 40px 0 0;
@@ -120,13 +136,14 @@ label{
 } */
 
 .main-h{
-  position: relative;
-  padding: 20px 150px;
+  font-weight: 700;
+  margin-bottom: 10px;
+  text-align: center;
+  color: #374785;
 }
 .first-button a{
   text-decoration: none;
-  color: #dba074;
-  padding: 7px;
+  color: #f76c6c;
 
 }
 .first-button{
@@ -134,16 +151,16 @@ label{
   margin: 0 auto;
   cursor: pointer;
   background-color: transparent;
-   border: 1px solid #dba074;
-   color: #dba074;
+   border: 1px solid #f76c6c;
+   color: #f76c6c;
    transition: all 0.3s ease-in-out;
    }
 
 .first-button:hover, .first-button a:hover{
   opacity: 0.8;
   transition:  0.4s ease;
-  background-color: #2aa1d6;
-  color:#fff;
+  background-color: #F8E9A1;
+  color:#f76c6c;
 
 }
 .content-box {
@@ -194,7 +211,7 @@ label{
   font-weight: 500;
   border-radius: .25em;
   text-transform: uppercase;
-  background: #dba074!important;
+  background: #f76c6c!important;
   box-shadow: none;
   border: .07em solid #ffffff;
 }
@@ -548,7 +565,6 @@ h2 {
   padding-left: 0;
   padding-right: 0;
   padding-top: 0;
-  margin-bottom: 1.45rem;
   color: #2aa1d6;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
@@ -1013,8 +1029,8 @@ pre tt:after {
   .logo-style img{
     width: 100px;
   }
-  .main-h{
-    padding-top: 75px; 
+ .main-h{
+    margin-top: 75px; 
   }
   label{
     display: block;
