--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -31,8 +31,8 @@ p{
   width: 100%;
   padding: 60px 0;
   display: table;
-  background: rgb(193,200,228);
-  background: linear-gradient(0deg, rgba(193,200,228,1) 35%, rgba(132,206,235,1) 100%);
+  background: rgb(86,128,233);
+background: linear-gradient(139deg, rgba(86,128,233,1) 0%, rgba(87,188,144,1) 81%);
 
 }
 .slide2 {
@@ -41,33 +41,33 @@ p{
   width: 100%;
   display: table;
   background: rgb(86,128,233);
-background: linear-gradient(0deg, rgba(86,128,233,1) 0%, rgba(193,200,228,1) 100%);
+background: linear-gradient(45deg, rgba(86,128,233,1) 0%, rgba(87,188,144,1) 81%);
 }
 .slide3{
   padding: 60px 0;
   height: 100vh;
   width: 100%;
   display: table;
-  background: rgb(136,96,208);
-background: linear-gradient(0deg, rgba(132,206,235,1) 0%, rgba(86,128,233,1) 78%);
+  background: rgb(86,128,233);
+background: linear-gradient(140deg, rgba(86,128,233,1) 0%, rgba(87,188,144,1) 81%);
 }
 .slide4{
   padding: 60px 0;
   height: 100vh;
   width: 100%;
   display: table;
-  background: rgb(132,206,235);
-background: linear-gradient(0deg, rgba(136,96,208,1) 0%, rgba(132,206,235,1) 78%);
+  background: rgb(86,128,233);
+background: linear-gradient(45deg, rgba(86,128,233,1) 0%, rgba(87,188,144,1) 81%);
 }
 .slide1 p{
   font-weight: 300;
   width: 70%;
-  color: #374785;
+  color: #ffffff;
 }
 .slide2 p{
   font-weight: 300;
   width: 70%;
-  color: #374785;
+  color: #ffffff;
 }
 .logo-style{
   max-width: 200px;
@@ -98,13 +98,13 @@ background: linear-gradient(0deg, rgba(136,96,208,1) 0%, rgba(132,206,235,1) 78%
 .menu a {
   clear: right;
   text-decoration: none;
-  color: #fff;
+  color: #015249;
   margin: 0 10px;
   line-height: 70px;
 }
 .nav .menu {
   top:0;
-  background-color: #8860d0;
+  background-color: rgb(255, 255, 255);
   position: fixed;
   z-index: 10;
   width: 100%;
@@ -113,6 +113,7 @@ background: linear-gradient(0deg, rgba(136,96,208,1) 0%, rgba(132,206,235,1) 78%
 
 
 label{
+  color: #015249;
   margin: 0 40px 0 0;
   font-size: 26px;
   line-height: 70px;
@@ -136,38 +137,38 @@ label{
 
 .main-h{
   font-weight: 700;
-  margin-bottom: 10px;
+  margin-bottom: 50px;
   text-align: center;
-  color: #5680E9;
+  color: #015249;
 }
 
 .first-button{
   margin: 0 auto;
   text-decoration: none;
   text-align: center;
-  color: #8860d0;
+  color: #015249;
   padding: 10px;
   width: 80px;
   display: block;
   cursor: pointer;
   background-color: transparent;
-   border: 1px solid #8860d0;;
-   color: #8860d0;;
+   border: 1px solid #015249;
+   color: #015249;
    transition: all 0.3s ease-in-out;
    }
 
 .first-button:hover, .first-button a:hover{
   opacity: 0.8;
   transition:  0.4s ease;
-  background-color: #8860d0;
+  background-color: #015249;
   color:#ffffff;
 
 }
 .content-box {
-  background: #c1c8e4;
+  background: #a5a5af;
   text-align: center;
   width: 100%;
-  border: 1px solid #8860d0;
+  border: 1px solid #015249;
   border-radius: 6px;
   max-width: 25em;
   padding: 0 0 1em;
@@ -183,7 +184,7 @@ label{
   font-size: 13px;
 }
 .content-box h4{   
-  color: #8860d0;
+  color: #015249;
 }
 .content-box .image-box {
   width: 100%;
@@ -214,12 +215,12 @@ label{
   font-weight: 500;
   border-radius: .25em;
   text-transform: uppercase;
-  background: #8860d0!important;
+  background: #015249!important;
   box-shadow: none;
   border: .07em solid #ffffff;
 }
 .button:hover{
-  color: #2aa1d6;
+  color: #77c9d4;
 }
 .grid {
   display: flex;
@@ -365,7 +366,7 @@ a {
 a:active,
 a:hover {
   outline-width: 0;
-    color: rgba(32, 87, 190, 0.65);
+    color: #f7ce3e;
 
 }
 abbr[title] {
@@ -960,7 +961,7 @@ pre tt:after {
   height: 100%;
 }
 .site-footer{
-  background-color: #5ab9ea;
+  background-color: #ffffff;
   min-width: 100%; 
   height: 40px;
   bottom: 0px;
@@ -968,7 +969,7 @@ pre tt:after {
   right: 0px;
 }
 .site-footer ul li a {
-  color: #ffffff;
+  color: #015249;
   text-decoration: none;
   display: block;
   width: 100%;
@@ -1034,13 +1035,14 @@ pre tt:after {
   }
  .main-h{
     margin-top: 75px; 
+    margin-bottom: 50px;
   }
   label{
     display: block;
     cursor: pointer;
   }
   .nav{
-    background: #8860d0;
+    background: #ffffff;
     position: fixed;
     width:100%;
     z-index: 99;
