--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,33 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Lobster');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-2%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes shrink {
+  0% {
+    width: 95%;
+  }
+  100% {
+    width: 90%;
+  }
+}
 html {
   font-family: 'Montserrat', sans-serif;
   font-size: 12px;
@@ -83,11 +112,12 @@ background: linear-gradient(45deg, rgba(86,128,233,1) 0%, rgba(87,188,144,1) 81%
 }
 .article-style p{
   margin: auto auto 30px;
-  font-size: 13px;
+  font-size: 17px;
 }
 .nav{  
   text-align: right;
   height: auto;
+  font-size: 13px;
   height: 60px;
   line-height: 69px;
 }
@@ -104,7 +134,7 @@ background: linear-gradient(45deg, rgba(86,128,233,1) 0%, rgba(87,188,144,1) 81%
 }
 .nav .menu {
   top:0;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(221, 234, 250);
   position: fixed;
   z-index: 10;
   width: 100%;
@@ -147,8 +177,9 @@ label{
   text-decoration: none;
   text-align: center;
   color: #015249;
-  padding: 10px;
-  width: 80px;
+  padding: 20px;
+  width: 120px;
+  font-size: 17px;
   display: block;
   cursor: pointer;
   background-color: transparent;
@@ -558,7 +589,7 @@ h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1.5rem;
+  font-size: 35px;
   line-height: 1.1;
 }
 h2 {
@@ -573,7 +604,7 @@ h2 {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1.2rem;
+  font-size: 29px;
   line-height: 1.1;
 }
 h3 {
@@ -589,7 +620,7 @@ h3 {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1rem;
+  font-size: 25px;
   line-height: 1.1;
 }
 h4 {
@@ -961,7 +992,7 @@ pre tt:after {
   height: 100%;
 }
 .site-footer{
-  background-color: #ffffff;
+  background-color: rgb(221, 234, 250);
   min-width: 100%; 
   height: 40px;
   bottom: 0px;
@@ -1029,7 +1060,7 @@ pre tt:after {
   font-size: 10px;
  }
 }
-@media only screen and (max-width: 915px){
+@media only screen and (max-width: 957px){
   .logo-style img{
     width: 100px;
   }
@@ -1042,7 +1073,7 @@ pre tt:after {
     cursor: pointer;
   }
   .nav{
-    background: #ffffff;
+    background-color: rgb(221, 234, 250);
     position: fixed;
     width:100%;
     z-index: 99;
@@ -1058,11 +1089,32 @@ pre tt:after {
     display: block;
     border-bottom: 1px solid #fff;
     margin:0;
+
   }
   #toggle:checked + .menu{
     display: block;
   }
   }
+  @media only screen and (max-width: 650px){
+    h1{
+      font-size: 25px;
+    }
+    h2{
+      font-size: 22px;
+    }
+    h3{
+      font-size: 20px;
+    }
+    .article-style p{
+      font-size: 14px;
+      padding: 0px;
+    }
+    .first-button{
+      padding: 10px;
+      font-size: 13px;
+      width: 80px;
+    }
+}
   @media only screen and (max-width: 580px){
   .ecocontent{
       width:100%;
