--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -116,32 +116,58 @@ background: linear-gradient(45deg, rgba(86,128,233,1) 0%, rgba(87,188,144,1) 81%
 }
 .nav{  
   text-align: right;
-  height: auto;
   font-size: 13px;
   height: 60px;
   line-height: 69px;
+
+}
+.menu .nav {
+  bottom: 0;
 }
 .menu {
   background:#ffffff;
   margin-bottom: 0;
 }
 .menu a {
+  bottom: 0; 
   clear: right;
   text-decoration: none;
   color: #015249;
+  transition:  0.3s ease;
   margin: 0 10px;
   line-height: 70px;
 }
 .nav .menu {
   top:0;
-  background-color: rgb(221, 234, 250);
+  background-color: rgb(255, 255, 255);
   position: fixed;
   z-index: 10;
   width: 100%;
   box-shadow: 0 1px 4px  rgba(0,0,0,.2);
 }
+a.underline {
+  padding-bottom: 3px;
+  display: inline-block;
+  transition: all 500ms ease;
+}
 
+a.underline:after {
+  content: '';
+  display: block;
+  margin: auto;
+  height: 3px;
+  width: 0px;
+  transition: width .5s ease, background-color .5s ease;
+}
 
+a.underline:hover {
+  color: #2aa1d6;
+}
+
+a.underline:hover:after {
+  width: 100%;
+  background: #2aa1d6;
+}
 label{
   color: #015249;
   margin: 0 40px 0 0;
@@ -179,7 +205,7 @@ label{
   color: #015249;
   padding: 20px;
   width: 120px;
-  font-size: 17px;
+  font-size: 15px;
   display: block;
   cursor: pointer;
   background-color: transparent;
@@ -190,6 +216,7 @@ label{
 
 .first-button:hover, .first-button a:hover{
   opacity: 0.8;
+  text-decoration: none;
   transition:  0.4s ease;
   background-color: #015249;
   color:#ffffff;
@@ -201,9 +228,9 @@ label{
   width: 100%;
   border: 1px solid #015249;
   border-radius: 6px;
-  max-width: 25em;
+  max-width: 450px;
   padding: 0 0 1em;
-  height: 250px;
+  height: 300px;
   margin: 0 auto 30px auto;
   display: block;
 }
@@ -212,22 +239,24 @@ label{
   color: rgb(255, 255, 255);
   font-size: 15px;
   line-height: 1.3;
-  font-size: 13px;
+  font-size: 16px;
 }
 .content-box h4{   
   color: #015249;
+  padding: 20px;
 }
 .content-box .image-box {
   width: 100%;
   position: relative;
-  height: 100px;
+  height: 150px;
   border-radius: 5px 5px 0 0 ;
   overflow: hidden;
 }
 .button {
   cursor: pointer;
-  margin: 10px auto 10px auto;
+  /* margin: 10px auto 10px auto; */
   display: inline-flex;
+  font-size: 15px;
   position: relative;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -239,8 +268,8 @@ label{
   text-decoration: none;
   -webkit-appearance: none;
   color: #ffffff;
-  padding: .25em 1em;
-  min-width: 3.5em;
+  padding: 7px 15px;
+  min-width: 60px;
   min-height: 1.5em;
   line-height: 1.4em;
   font-weight: 500;
@@ -397,7 +426,7 @@ a {
 a:active,
 a:hover {
   outline-width: 0;
-    color: #f7ce3e;
+    color: #2aa1d6;
 
 }
 abbr[title] {
@@ -1021,6 +1050,11 @@ pre tt:after {
   .contP{
     margin-bottom: 60px;
   }
+  a {
+    color: #ff7013;
+    text-decoration: none;
+  }
+
   @media only screen and (max-width: 1024px) {
     html {
       font-size: 100%;
@@ -1073,7 +1107,7 @@ pre tt:after {
     cursor: pointer;
   }
   .nav{
-    background-color: rgb(221, 234, 250);
+    background-color: rgb(255, 255, 255);
     position: fixed;
     width:100%;
     z-index: 99;
