--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1013,7 +1013,7 @@ pre tt:after {
   height: 100%;
 }
 .site-footer{
-  background-color: rgb(221, 234, 250);
+  background-color: #E0F8F1;
   min-width: 100%; 
   height: 40px;
   bottom: 0px;
