--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -118,15 +118,6 @@ background: linear-gradient(45deg, rgba(86,128,233,1) 0%, rgba(87,188,144,1) 81%
   margin: auto auto 30px;
   font-size: 17px;
 }
-.nav{  
-  text-align: right;
-  font-size: 13px;
-  height: 60px;
-  line-height: 69px;
-}
-.menu .nav {
-  bottom: 0;
-}
 .menu {
   background:transparent;
   margin-bottom: 0;
@@ -143,47 +134,8 @@ background: linear-gradient(45deg, rgba(86,128,233,1) 0%, rgba(87,188,144,1) 81%
   z-index: 99;
   line-height: 60px;
 }
-.nav .menu {
-  top:0;
-  background-color: rgb(255, 255, 255);
-  position: fixed;
-  z-index: 99;
-  width: 100%;
-  box-shadow: 0 1px 4px  rgba(0,0,0,.2);
-}
-
-a.underline:hover {
-  color: #2aa1d6;
-}
-
-a.underline:hover:after {
-  width: 100%;
-  background: #2aa1d6;
-}
-label{
-  color: #015249;
-  margin: 0 40px 0 0;
-  font-size: 26px;
-  line-height: 70px;
-  display: none;
-  width: 26px;
-  float: right;
-}
-#toggle {
-  display: none;
-}
-
-/* .hero-image{
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center center;
-  opacity: 1;
-  transition: opacity 500ms ease 0s;
-} */
-
 .main-h{
+  padding-top: 70px; 
   font-weight: 700;
   margin-bottom: 50px;
   text-align: center;
@@ -246,7 +198,6 @@ label{
 }
 .button {
   cursor: pointer;
-  /* margin: 10px auto 10px auto; */
   display: inline-flex;
   font-size: 15px;
   position: relative;
@@ -274,99 +225,6 @@ label{
 .button:hover{
   color: #77c9d4;
 }
-.grid {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  width: calc(80% + 1em);
-  margin: 0 auto 0 auto;
-}
-.active-cyan-2 input[type=text]:focus:not([readonly]) {
-  border-bottom: 1px solid #4dd0e1;
-  box-shadow: 0 1px 0 0 #4dd0e1;
-  }
-.ecocontent{
-  width:50%;
-  float: left;
-}
-.sideBar{
-  width: 40%;
-  max-width: 30em;
-  display: block;
-  box-sizing: inherit;
-  float: right;
-  margin: 15px 2px 15px 20px;
-  height: 300px;
-  position: relative;
-  margin-bottom: 100px;
-}
-.side-article:last-child {
-  margin-bottom: 70px;
-}
-.side-p{
-  font-size: 10px;
-}
-p.time {
-  font-size: .8em;
-  color: #aaa;
-  display: flex;
-  align-items: center;
-}
-p.time svg {
-  max-width: 1.2em;
-  max-height: 1.2em;
-  margin-right: .2em;
-}
-.side-h{
-  margin: 0;
-  padding: 0 0 .25em;
-  font-size: 2em;
-  color: #2aa1d6;
-}
-.sideImgs{
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  object-fit: cover; 
-  object-position: center center;
-}
-.search {
-  width: 110%;
-  position: relative;
-  display: flex;
-  margin-bottom: 20px;
-}
-
-.searchTerm {
-  width: 100%;
-  border: 3px solid #2aa1d6;
-  border-right: none;
-  padding: 5px;
-  height: 20px;
-  border-radius: 5px 0 0 5px;
-  outline: none;
-  color: #2aa1d6;
-}
-
-.searchTerm:focus{
-  color: #2aa1d6;
-}
-
-.searchButton {
-  width: 40px;
-  height: 36px;
-  border: 1px solid #2aa1d6;
-  background: #2aa1d6;
-  text-align: center;
-  color: #fff;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-/*Resize the wrap to see the search bar change!*/
 .wrap{
   width: 50%;
 }
@@ -564,9 +422,6 @@ html {
   font: 112.5%/1.45em georgia, serif;
   box-sizing: border-box;
   overflow-y: scroll;
-}
-* {
-  /* box-sizing: inherit; */
 }
 *:before {
   box-sizing: inherit;
@@ -988,9 +843,6 @@ pre tt:after {
 .mainMenu {
   font-size: '10px;';
 }
-.search{
-  border-radius: 22px;
-}
 
 .site-footer h4{
   margin-left: 0;
@@ -1066,9 +918,6 @@ pre tt:after {
     .site-footer{
     height:70px;
    }
-   /* .main-h{
-    position: relative;
-  } */
   }
 @media only screen and (max-width: 480px) {
   html {
@@ -1094,7 +943,6 @@ pre tt:after {
     width: 100px;
   }
  .main-h{
-    margin-top: 75px; 
     margin-bottom: 50px;
   }
   label{
