--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -59,6 +59,17 @@ p{
   visibility: hidden;
   margin-right: 10px;
 }
+.slide0{
+  height: 100vh;
+  width: 100%;
+  padding: 60px 0;
+  display: table;
+  background: rgb(86,128,233);
+  background-image: url(https://niwaterworks.com/wp-content/uploads/2019/07/payonline.jpg);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  }
 .slide1{
   height: 100vh;
   width: 100%;
