--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -177,7 +177,7 @@ p{
   font-weight: 700;
   margin-bottom: 40px;
   text-align: center;
-  color: #dea470;
+  color: #8329a6;
 }
 .main-h1{
   padding-top: 70px; 
