--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -891,7 +891,7 @@ pre tt:after {
 }
 
 .site-footer{
-  background-color: #dea470;
+  background-color: #343434;
   min-width: 100%; 
   height: 40px;
   bottom: 0px;
