--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -476,7 +476,7 @@ html {
   box-sizing: inherit;
 }
 body {
-  color: hsla(0, 4%, 43%, 0.8);
+  color: #2ba1cf;
   font-family: 'Montserrat', sans-serif;  
   font-size: 12px;
   font-weight: normal;
